# gradbot

./: .dockerignore  .gitignore  Blog.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md
demos/: README.md  app.py  config.example.yaml  pyproject.toml
demos/business_bank/: main.py  pyproject.toml
demos/business_bank/prompts/: auth_en.txt  auth_fr.txt  loan_en.txt  loan_fr.txt  service_en.txt  service_fr.txt
demos/business_bank/static/: index.html
demos/chick_fil_a/: README.md  cjk_logit_bias.json  main.py  menu_translations 2.json  pyproject.toml
demos/chick_fil_a/static/: index.html
demos/fantasy_shop/: README.md  game.py  main.py  pyproject.toml
demos/fantasy_shop/prompts/: attendant.txt  manager.txt
demos/fantasy_shop/static/: index.html
demos/hotel/: hotels.json  main.py  pyproject.toml
demos/hotel/prompts/: base.txt  phase1.txt  phase2.txt  phase3.txt
demos/hotel/static/: index.html
demos/npc_3d_game/: main.py
demos/npc_3d_game/static/: index.html
demos/npc_3d_game/static/assets/: assets_index.json
demos/npc_3d_game/static/src/: config.js  main.js
demos/npc_3d_game/static/src/audio/: MusicManager.js
demos/npc_3d_game/static/src/debug/: DebugOverlay.js
demos/npc_3d_game/static/src/engine/: GameLoop.js  SceneManager.js
demos/npc_3d_game/static/src/game/: CharacterLoader.js  ClueSystem.js  DataRefinement.js  IntroSequence.js  NPCPatrol.js  Neil.js  NeilAI.js  Player.js  SuspicionSystem.js  ThirdPersonCamera.js
demos/npc_3d_game/static/src/network/: TTSClient.js  VoiceClient.js  basePath.js
demos/npc_3d_game/static/src/ui/: GameUI.js  RefinementHUD.js  ShiftTimer.js  UIOverlay.js
demos/npc_3d_game/static/src/world/: Furniture.js  GradiumOffice.js  Materials.js
demos/npc_3d_game/tests/: test_win_condition.py
demos/restaurant_ordering/: README.md  main.py  menu.json  menu_translations.json  pyproject.toml
demos/simple_chat/: README.md  main.py  pyproject.toml
demos/simple_chat/static/: index.html
demos/spanish_teacher/: README.md  main.py  pyproject.toml
demos/spanish_teacher/prompts/: system.txt
demos/spanish_teacher/static/: index.html
demos/threejs_game/: clue_data.py  main.py
demos/threejs_game/static/assets/: assets_index.json
demos/threejs_game/static/src/: config.js  main.js
demos/threejs_game/static/src/audio/: SFXManager.js
demos/threejs_game/static/src/engine/: InputManager.js  SceneManager.js
demos/threejs_game/static/src/game/: CameraController.js  ClueSystem.js  FirstPersonController.js  GameStateMachine.js  InteractionSystem.js  IntroSequence.js  Milchick.js  MilchickAI.js  NPCAnimator.js  NPCPatrol.js  Player.js  PlayerAnimator.js  SuspicionSystem.js  (+1 more)
demos/threejs_game/tests/: test_win_condition.py
gradbot_lib/: Cargo.toml
gradbot_lib/src/: decoder.rs  encoder.rs  lib.rs  llm.rs  mock.rs  multiplex.rs  speech_to_text.rs  system_prompt.rs  text_to_speech.rs  utils.rs  wav.rs
gradbot_py/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
gradbot_py/gradbot/: __init__.py  _gradbot.pyi  config.py  langs.py  routes.py  schemas.py  voices.py  websocket.py
gradbot_py/src/: lib.rs  remote.rs
gradbot_py/tests/: test_config.py  test_routes.py  test_schemas.py  test_voices.py  test_websocket.py
gradbot_server/: Cargo.toml  config.example.toml
gradbot_server/src/: config.rs  main.rs  protocol.rs  server.rs
src/: lib.rs  (+5 more)
(+13 files in other folders)
