[project]
name = "gradbot-demos"
version = "0.1.0"
description = "All Gradbot demos in a single app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=11.0",
    "gradbot",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "linkup-sdk",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "jericho>=0.1.0",
    "spacy>=3.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[tool.uv.sources]
gradbot = { path = "../gradbot_py" }
