[package]
name = "gradbot_py"
version.workspace = true
edition.workspace = true
description = "Python bindings for gradbot"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "_gradbot"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gradbot = { workspace = true }

[features]
extension = ["pyo3/extension-module"]
