[package]
name = "gradbot_server"
version.workspace = true
edition.workspace = true
description = "Standalone gradbot WebSocket server"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
gradbot.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
